@@ -9,7 +9,7 @@ module Gem
   # An Array of the default sources that come with RubyGems
 
   def self.default_sources
-    %w[http://gems.rubyforge.org/]
+    %w[http://rubygems.org/]
   end
 
   ##
