@@ -5,6 +5,18 @@ require "rubygems/requirement"
 
 class Gem::Dependency
 
+  # :stopdoc:
+  @warned_version_requirement = false
+
+  def self.warned_version_requirement
+    @warned_version_requirement
+  end
+
+  def self.warned_version_requirement= value
+    @warned_version_requirement = value
+  end
+  # :startdoc:
+
   ##
   # Valid dependency types.
   #--
@@ -136,9 +148,14 @@ class Gem::Dependency
   end
 
   def version_requirements # :nodoc:
-    warn "Gem::Dependency#version_requirements is deprecated" \
-         " and will be removed on or after August 2010. " \
-         " Use Gem::Dependency#requirement: #{caller.first}"
+    unless Gem::Dependency.warned_version_requirement then
+      warn "#{Gem.location_of_caller.join ':'}:Warning: " \
+           "Gem::Dependency#version_requirements is deprecated " \
+           "and will be removed on or after August 2010.  " \
+           "Use #requirement"
+
+      Gem::Dependency.warned_version_requirement = true
+    end
 
     __requirement
   end
